# simplegrad

./: .gitignore  404.html  AGENTS.md  CNAME  MANIFEST.in  README.md  bigram.ipynb  build_web.py  check_cupy.py  conv_bechmark.py  decoder_only.ipynb  demo.ipynb  index.html  mkdocs.yml  mnist.ipynb  mnist_cnn.ipynb  mnist_dense_network.ipynb  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  simpleboard.yml
api/dtypes/: index.html
api/factory/: index.html
api/tensor/: index.html
api/track/: index.html
api/visual/: index.html
benchmarks/: cnn.py  conv2d.py  dashboard.html  dashboard.py  mlp.py
benchmarks/logs/: cnn_2026-05-07_02-39-06.json  conv_2026-05-04_09-37-48.json  conv_2026-05-05_11-27-09.json  mlp_2026-05-07_02-38-18.json
benchmarks/utils/: __init__.py  runner.py  sysinfo.py
docs/: index.md  introduction.md
docs/api/: dtypes.md  factory.md  simpleboard.md  tensor.md  track.md  visual.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: bigram.py  mnist_dense_network.ipynb  mnist_dense_network.py
scripts/: build_web.py  setup_vps.sh
search/: search_index.json
simplegrad/: __init__.py  dtypes.py  model.py
simplegrad/core/: __init__.py  activations.py  autograd.py  compound_ops.py  devices.py  dtypes.py  factory.py  losses.py  module.py  ops.py  optimizer.py  scheduler.py  seed.py  tensor.py  tranform.py
simplegrad/functions/: __init__.py  activations.py  conv.py  factory.py  function.py  losses.py  math.py  norm.py  ops.py  pooling.py  reduction.py  tranform.py
simplegrad/modules/: __init__.py  activation_layers.py  dropout.py  layers.py  linear.py  loss_layers.py  module.py
simplegrad/nn/: __init__.py  activation_layers.py  conv.py  (+9 more)
tests/: conftest.py  test_activations.py  test_autograd.py  test_devices.py  test_functions.py  test_lazy.py  test_losses.py  test_math.py  test_nn.py  test_optimizers.py  test_schedulers.py  test_transforms.py  test_visual.py  utils.py
tools/: build_hooks.py  build_simpleboard.py
(+148 files in other folders)
