[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplegrad"
version = "0.1.0"
description = "A simple DL framework with visualization tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "graphviz>=0.20",
    "fastapi>=0.95",
    "uvicorn>=0.21",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0", "mypy>=0.990"]

[project.scripts]
simpleboard = "simplegrad.simpleboard.cli:main"

[tool.setuptools]
packages = ["simplegrad"]

[tool.setuptools.package-data]
simplegrad = ["simpleboard/app/dist/**/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["./tests"]
python_files = "test_*"
pythonpath = ["."]