[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplegrad"
version = "0.1.0"
description = "Simple DL framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "graphviz>=0.20",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
bench = ["torch>=2.0"]
dev = ["pytest>=7.0", "black>=22.0", "mypy>=0.990", "ipykernel"]
docs = [
  "mkdocs>=1.5,<2.0",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24",
]

[project.scripts]
simpleboard = "simplegrad.simpleboard.cli:main"

[tool.setuptools.cmdclass]
build_py = "tools.build_hooks:BuildPyCommand"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplegrad*"]

[tool.setuptools.package-data]
simplegrad = ["simpleboard/app/dist/**/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["./tests"]
python_files = "test_*"
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = '''
/(
    \.venv
  | node_modules
  | \.git
  | dist
  | build
)/
'''
